- customized app colors

--- a/app/src/main/res/layout/keyword_search_view.xml
+++ b/app/src/main/res/layout/keyword_search_view.xml
@@ -38,15 +38,12 @@
             android:layout_marginEnd="14dp"
             android:foregroundGravity="center_vertical"
             android:gravity="center_vertical"
-            android:hint="add keywords for the search"
             android:maxLength="40"
             android:maxLines="1"
-            android:outlineAmbientShadowColor="@color/white"
-            android:outlineSpotShadowColor="@color/white"
             android:shadowColor="@color/white"
             android:textColor="@color/white"
             android:textColorHighlight="@color/white"
-            android:textColorHint="@color/Gray_Cloud"
+            android:textColorHint="@color/white"
             android:textColorLink="@color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
